[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/visual_fsm/resources/icons/icon_timer.svg" type="Texture" id=1]
[ext_resource path="res://addons/visual_fsm/resources/icons/icon_joypad.svg" type="Texture" id=2]
[ext_resource path="res://addons/visual_fsm/resources/icons/icon_script.svg" type="Texture" id=3]
[ext_resource path="res://addons/visual_fsm/editor/vfsm_trigger_graph_slot.gd" type="Script" id=4]
[ext_resource path="res://addons/visual_fsm/resources/icons/close-cross-symbol-in-a-circle.svg" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="TriggerSlot" type="PanelContainer"]
margin_right = 172.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" type="HBoxContainer" parent="."]
visible = false
margin_right = 184.0
margin_bottom = 32.0

[node name="ActionMargins" type="MarginContainer" parent="Action"]
margin_right = 28.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="ActionLabel" type="Label" parent="Action/ActionMargins"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 32.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
valign = 1

[node name="Button" type="CenterContainer" parent="Action"]
margin_left = 124.0
margin_right = 152.0
margin_bottom = 32.0
rect_min_size = Vector2( 28, 32 )

[node name="Action" type="Button" parent="Action/Button"]
margin_right = 28.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )

[node name="Close" type="CenterContainer" parent="Action"]
margin_left = 156.0
margin_right = 184.0
margin_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button" type="Button" parent="Action/Close"]
margin_right = 28.0
margin_bottom = 32.0
rect_min_size = Vector2( 28, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 5 )
expand_icon = true

[node name="Timer" type="HBoxContainer" parent="."]
visible = false
margin_right = 172.0
margin_bottom = 32.0

[node name="DurationMargins" type="MarginContainer" parent="Timer"]
margin_right = 28.0
margin_bottom = 32.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Duration" type="Label" parent="Timer/DurationMargins"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 32.0
focus_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
text = "0"
valign = 1

[node name="Seconds" type="Label" parent="Timer"]
margin_left = 32.0
margin_right = 108.0
margin_bottom = 32.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "sec"
valign = 1

[node name="Button" type="CenterContainer" parent="Timer"]
margin_left = 112.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 28, 32 )

[node name="Timer" type="Button" parent="Timer/Button"]
margin_right = 28.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 1 )

[node name="Close" type="CenterContainer" parent="Timer"]
margin_left = 144.0
margin_right = 172.0
margin_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button" type="Button" parent="Timer/Close"]
margin_right = 28.0
margin_bottom = 32.0
rect_min_size = Vector2( 28, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 5 )
expand_icon = true

[node name="Script" type="HBoxContainer" parent="."]
visible = false
margin_right = 172.0
margin_bottom = 32.0

[node name="TitleMargins" type="MarginContainer" parent="Script"]
margin_right = 108.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Title" type="Label" parent="Script/TitleMargins"]
margin_left = 10.0
margin_right = 98.0
margin_bottom = 32.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
text = "ScriptName"
valign = 1

[node name="Button" type="CenterContainer" parent="Script"]
margin_left = 112.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 28, 32 )

[node name="Script" type="Button" parent="Script/Button"]
margin_right = 28.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 3 )

[node name="Close" type="CenterContainer" parent="Script"]
margin_left = 144.0
margin_right = 172.0
margin_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button" type="Button" parent="Script/Close"]
margin_right = 28.0
margin_bottom = 32.0
rect_min_size = Vector2( 28, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 5 )
expand_icon = true
[connection signal="pressed" from="Action/Button/Action" to="." method="_on_Action_pressed"]
[connection signal="pressed" from="Action/Close/Button" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Timer/Button/Timer" to="." method="_on_Timer_pressed"]
[connection signal="pressed" from="Timer/Close/Button" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Script/Button/Script" to="." method="_on_Script_pressed"]
[connection signal="pressed" from="Script/Close/Button" to="." method="_on_CloseButton_pressed"]
